fix: line breaks in pre elements

--- a/app/css/styles.scss
+++ b/app/css/styles.scss
@@ -395,6 +395,10 @@ section h2:after {
   display: none;
 }
 
+.triple-flex pre br {
+  display: inline;
+}
+
 ul.spaced li {
   margin-bottom: 0.75em;
 }
